--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/quiensoy.html">Quién Soy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                        </li>
                     </ul>
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
@@ -55,7 +58,7 @@
     <!-- Fin de Encabezado -->
 
     <!-- Titulo -->
-    <h1>Asuntos Internacionales</h1>
+    <h1 class="text-dark">Asuntos Internacionales</h1>
     <!-- Fin Titulo -->
 
     <!-- Contenido Principal -->
@@ -100,9 +103,8 @@
                             <img class="card-img-top" src="./assets/img/RUSIA-UCRANIA.jpeg" alt="Card image">
                             <div class="card-body">
                                 <h4 class="card-title">Conflicto Ruso-Ucraniano</h4>
-                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsum
-                                    quam impedit saepe eius, sit provident sint eum deserunt quas enim vero nisi. Soluta</p>
-                                <a href="#" class="btn btn-primary">Leer</a>
+                                <p class="card-text">La Guerra Híbrida entre Rusia y la OTAN, utiliza a Ucrania como proxy para las pruebas de aramamentos, con el fín de evitar un enfrentamiento directo.</p>
+                                <a href="./pages/politicainternacional.html" class="btn btn-primary">Leer</a>
                             </div>
                         </div>
                     </div>
@@ -112,8 +114,8 @@
                             <img src="./assets/img/CHINA-TAIWAN.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">¿China buscar tomar Taiwan?</h5>
-                                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed cum, voluptatem id quibusdam numquam ab deleniti sequi repellat quisquam dignissimos eveniet iusto</p>
-                                <a href="#" class="btn btn-primary">Leer</a>
+                                <p class="card-text">El largo conflicto de antaño entre China y Taiwan, parece pontenciarse cada día más. La politica de "Una sola China" parece empezar a asustar a la Isla, y a EE.UU.</p>
+                                <a href="./pages/politicainternacional.html" class="btn btn-primary">Leer</a>
                             </div>
                         </div>
                     </div>
@@ -123,8 +125,8 @@
                             <img src="./assets/img/shanghai-covid.jpg" class="card-img-top" alt="Covid en Shanghai">
                             <div class="card-body">
                                 <h5 class="card-title">Politica de Covid-0 trae problemas en Shanghai</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, beatae magni iusto nisi asperiores neque, ipsum earum consectetur</p>
-                                <a href="#" class="btn btn-primary">Leer</a>
+                                <p class="card-text">El aumento de casos de covid en la ciudad China, sumando a su política de covid-0, han causado grandes problemas.</p>
+                                <a href="./pages/politicainternacional.html" class="btn btn-primary">Leer</a>
                             </div>
                         </div>
                     </div>
@@ -149,6 +151,9 @@
             <li class="page-item"><a class="page-link" href="./pages/biblioteca.html">Biblioteca</a></li>
             <li class="page-item">
                 <a class="page-link" href="./pages/quiensoy.html">Quién soy</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="./pages/contacto.html">Contacto</a>
             </li>
         </ul>
     </nav>
