--- a/pages/politicainternacional.html
+++ b/pages/politicainternacional.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Politica Internacional, Rusia, Ucrania, China, Shanghai, Covid">
-    <meta name="description" content="El conflicto ruso-ucraniano y el posible descenlace en una 3ra Guerra Mundial. Ante el caos la oportunidad del gigante asiatico de anexar por la fuerza a Taiwan. La politica de Covid-0 lleva a una crisis en Shanghai.">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <meta name="description"
+        content="El conflicto ruso-ucraniano y el posible descenlace en una 3ra Guerra Mundial. Ante el caos la oportunidad del gigante asiatico de anexar por la fuerza a Taiwan. La politica de Covid-0 lleva a una crisis en Shanghai.">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/destino.css">
     <title>Politica Internacional</title>
 </head>
 
-<body class="p-3 mb-2 bg-dark text-white">
+<body class="p-3 mb-2 bg-white text-dark">
     <!-- HEADER -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -41,6 +43,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Quién Soy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
+                        </li>
                     </ul>
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
@@ -60,34 +65,90 @@
     <main>
         <div class="container">
             <div class="col-md-12">
-                <h2>Rusia vs China</h2>
-                <p class="post text-dark">'You ought to be ashamed of yourself for asking such a simple question,' added the Gryphon; and then
-                    they both sat silent and looked at poor Alice, who felt ready to sink into the earth. At last the
-                    Gryphon said to the Mock Turtle, 'Drive on, old fellow! Don't be all day about it!' and he went on
-                    in these words:
-                    'Yes, we went to school in the sea, though you mayn't believe it—'
-                    'I never said I didn't!' interrupted Alice.
-                    'You did,' said the Mock Turtle.</p>
+                <h2>Rusia vs Ucrania</h2>
+                <p class="post text-dark">Las guerras del siglo XXI no son totalmente militares. EEUU, sin participar
+                    directamente en el conflicto, libra varias guerras simultáneas contra Moscú como parte de la
+                    ‘Primera Guerra Híbrida Mundial’, donde destacan sus ‘sanciones catastróficas’.
+                    Sanciones catastróficas con su doble guerra financiera y económica que tienen como objetivo la
+                    ‘derrota estratégica’ de Rusia.
+                    La generalizada narrativa occidental asevera que el Gral. Valeri Guerásimov, Jefe del Estado Mayor
+                    del ejército ruso, es el inventor del concepto de guerra híbrida, que combina el uso de armas
+                    convencionales con métodos no-militares, como los ciberataques y la desinformación.
+                    Han existido muchas guerras híbridas focalizadas y regionalizadas, como la de la guerrilla chiíta
+                    libanesa de Hezbolá contra Israel y otras más que los multimedia occidentales endosan a Rusia: desde
+                    Georgia, pasando por Siria, hasta el Donbás —la región oriental de Ucrania donde han declarado su
+                    independencia respectiva Lugansk y Donetsk— cuya mayoría demográfica es rusófona/rusófila y de
+                    religión ortodoxa.
+                    A mi juicio, Ucrania es hoy el asiento de la Primera Guerra Híbrida Mundial que libra en forma
+                    indirecta/tangencial EEUU contra Rusia —cuya masa crítica se condensa en Kiev— que ha provocado una
+                    serie de medidas asfixiantes, catalogadas de “sanciones catastróficas”, que han permitido a
+                    EEUU/OTAN/Unión Europea asestar “varias guerras en una”: desinformativa, cultural, civilizatoria,
+                    demográfica, cibernética, maniquea, radioactiva, biológica, orwelliana, neomacartista, de censura,
+                    ideológica, comercial, financiera, económica, etc, etc.
+                </p>
             </div>
         </div>
-            
+
         <div class="container">
             <div class="col-md-12">
                 <h2>China vs Taiwan</h2>
-                    <p class="post text-dark">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum officia reiciendis aliquid quia temporibus ullam cupiditate ab, possimus, consectetur doloribus ipsa necessitatibus eligendi tenetur suscipit. Optio officiis error veritatis qui!
-                    Eligendi, deserunt modi dicta odit dolor quo? Atque, explicabo sequi! Ratione deserunt repellat vero cupiditate placeat molestiae ad neque itaque, facilis atque illum alias facere animi non corporis exercitationem sapiente.
-                    Nemo inventore labore quam numquam consequuntur odio ad, minima tempore facilis. Dolorum ab dolore excepturi dolores neque quam rem, dicta asperiores esse distinctio vel iure doloribus. Sit quo rem incidunt?
-                    Animi praesentium similique culpa ullam alias! Id expedita soluta, aliquid illum architecto quam, facilis, deleniti sit provident dolor in beatae molestiae explicabo pariatur quia doloribus a aperiam. Cupiditate, accusantium cum?</p>
+                <p class="post text-dark">Las tensiones son simplemente un recordatorio de las largas décadas de
+                    hostilidad entre los gobiernos en Beijing y Taipei, con ambos bandos reclamando históricamente ser
+                    los gobernantes legítimos de todos los territorios de China, incluida Taiwán.
+
+                    El nombre oficial de Taiwán, República de China, se remonta a su fundación en 1911 tras el colapso
+                    de la última dinastía imperial de China.
+
+                    Bajo el gobierno del Partido Nacionalista, o Kuomintang (KMT), liderado por Chiang Kai-shek, la
+                    República de China debió enfrentarse a comienzos de la década de 1930 y luego durante la Segunda
+                    Guerra Mundial a los avances del Imperio del Japón, así como también al creciente poder de los
+                    comunistas chinos liderados por Mao Zedong.
+                    En 1945, tras la derrota japonesa, la República de China recuperó la isla de Taiwán, que China había
+                    perdido en una guerra anterior con los japoneses. Pero cuatro años más tarde, en 1949, el Kuomintang
+                    fue derrotado en una cruenta guerra civil en el continente por el ejército del Partido Comunista.
+
+                    Ese mismo año Mao fundó la República Popular China, con capital en Beijing.
+
+                    Cerca de 1,2 millones de chinos, principalmente militares, acompañaron al gobierno de Chiang
+                    Kai-Shek en su éxodo a Taiwán, de acuerdo con estimaciones realizadas por las autoridades de Taiwán,
+                    y tras derrotar una breve incursión de las tropas comunistas en la isla lograron establecerse allí.
+
+                    Las fuerzas de Mao, en cambio, expandieron su control en el territorio continental de China, y desde
+                    entonces consideran a Taiwán como una provincia renegada y una “parte inalienable” que en algún
+                    momento retornará al control de Beijing.
+                </p>
             </div>
         </div>
 
         <div class="container">
             <div class="col-md-12">
                 <h2>Shanghai en crisis</h2>
-                    <p class="post text-dark">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum officia reiciendis aliquid quia temporibus ullam cupiditate ab, possimus, consectetur doloribus ipsa necessitatibus eligendi tenetur suscipit. Optio officiis error veritatis qui!
-                    Eligendi, deserunt modi dicta odit dolor quo? Atque, explicabo sequi! Ratione deserunt repellat vero cupiditate placeat molestiae ad neque itaque, facilis atque illum alias facere animi non corporis exercitationem sapiente.
-                    Nemo inventore labore quam numquam consequuntur odio ad, minima tempore facilis. Dolorum ab dolore excepturi dolores neque quam rem, dicta asperiores esse distinctio vel iure doloribus. Sit quo rem incidunt?
-                    Animi praesentium similique culpa ullam alias! Id expedita soluta, aliquid illum architecto quam, facilis, deleniti sit provident dolor in beatae molestiae explicabo pariatur quia doloribus a aperiam. Cupiditate, accusantium cum?</p>
+                <p class="post text-dark">Confinamientos en Shanghái: “El miedo ya no es al covid, es a lo que decidan
+                    hacer con tu cuerpo”.
+                    Shanghái enfrenta el mayor brote de coronavirus registrado en China desde enero de 2020, cuando
+                    empezó la pandemia. Según las cifras oficiales, más del 90% de los casos es asintomático. Para el 8
+                    de mayo, se reportaron 80 personas hospitalizadas en estado crítico y otras 415 con síntomas graves,
+                    de acuerdo con el Shanghai Fabu, el boletín oficial de la municipalidad.
+
+                    De los 27 millones de habitantes que tiene la ciudad, en lo que va del año se contabilizaron 536
+                    muertes por covid con un promedio de 78,9 años de edad. La mayoría sin vacunas y con enfermedades
+                    subyacentes.
+
+                    La viceprimer ministra china, Sun Chunlan, dijo a las autoridades shanghainesas que debían detener
+                    la trasmisión comunitaria el pasado 2 de abril. Desde ese momento, las políticas de tolerancia cero
+                    se recrudecieron y la cuarentena, que en un inicio duraría cinco días, se declaró indefinida.
+
+                    El jefe de epidemiología del Centro para el Control y Prevención de Enfermedades de China, Wu
+                    Zunyou, justificó las estrictas medidas asegurando que “son las que mejor se adaptan a la situación
+                    de China”. El país ha conseguido mantener uno de los índices más bajos de contagios y muertes por
+                    coronavirus del mundo, según datos oficiales, incluso con una baja tasa de vacunación de personas de
+                    riesgo.
+
+                    Sin embargo, a más de un mes de encierro, de desabastecimiento e incertidumbre, de ver a nuestros
+                    vecinos arrastrados fuera de sus casas, amigos que caen en el desempleo o huyen en los pocos vuelos
+                    que salen del Aeropuerto Internacional de Pudong, el miedo ya no es a la enfermedad, sino a las
+                    medidas. A lo que decidan hacer con tu cuerpo.
+                <p>
             </div>
         </div>
 
@@ -95,24 +156,24 @@
 
     <!-- MAIN -->
 
-         <!-- Páginas -->
+    <!-- Páginas -->
 
-         <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-center">
-                <!-- <li class="page-item disabled">
-                    <a class="page-link">Previous</a>
-                </li> -->
-                <li class="page-item"><a class="page-link" href="../index.html">Inicio</a></li>
-                <li class="page-item"><a class="page-link" href="./politicainternacional.html">Politica
-                        Internacional</a></li>
-                <li class="page-item"><a class="page-link" href="./biblioteca.html">Biblioteca</a></li>
-                <li class="page-item">
-                    <a class="page-link" href="./quiensoy.html">Quién soy</a>
-                </li>
-            </ul>
-        </nav>
-    
-        <!-- Fin de páginas -->
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+            <li class="page-item"><a class="page-link" href="../index.html">Inicio</a></li>
+            <li class="page-item"><a class="page-link" href="./politicainternacional.html">Politica
+                    Internacional</a></li>
+            <li class="page-item"><a class="page-link" href="./biblioteca.html">Biblioteca</a></li>
+            <li class="page-item">
+                <a class="page-link" href="./quiensoy.html">Quién soy</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="./contacto.html">Contacto</a>
+            </li>
+        </ul>
+    </nav>
+
+    <!-- Fin de páginas -->
 
     <!-- FOOTER -->
 
@@ -126,7 +187,9 @@
     <!-- FIN FOOTER -->
 
     <!-- JS de Boostrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
