--- a/pages/quiensoy.html
+++ b/pages/quiensoy.html
@@ -14,8 +14,8 @@
 
 <body>
 
-     <!-- Encabezado -->
-     <header>
+    <!-- Encabezado -->
+    <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25"
@@ -42,10 +42,13 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./quiensoy.html">Quién Soy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
+                        </li>
                     </ul>
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <button class="btn btn-outline-success" type="submit">Buscar</button>
                     </form>
                 </div>
             </div>
@@ -55,43 +58,56 @@
 
     <div class="container-fluid p-5 bg-dark text-white text-center">
         <h1 class="titulo">Quién soy</h1>
-        <p class="text-white">Mi nombre es Facundo Nasello, soy estudiante de RR.II en la UNLa. Además, estoy dando mis primeros pasos en el mundo del desarrollo web</p>
+        <p class="text-white">Mi nombre es Facundo Nasello, soy estudiante de RR.II en la UNLa. Además, estoy dando mis
+            primeros pasos en el mundo del desarrollo web</p>
     </div>
 
     <div class="container mt-5">
         <div class="row">
             <div class="col-sm-4">
-                <h3>Objetivos de la página</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+                <h3 class="text-white">Objetivos de la página</h3>
+                <p class="text-white">El objetivo primordial de ésta página es birndar información del escenario
+                    internacional complejo en el que vivimos.
+                    Pero de una forma distinta y desde otro punto de vista al cúal nos exponen los medios hegemonicos de
+                    comunicacíon.
+                </p>
             </div>
             <div class="col-sm-4">
-                <h3>Filosofía de vida</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+                <h3 class="text-white">Visión del mundo</h3>
+                <p class="text-white">Mi visión del mundo actual, es la de un mundo hostil, lleno de tensiones, en en
+                    donde los principales actores internacionales, ya sean Estados, Monarquías y el Capital Financiero
+                    Internacional, presiguiendo sus propios intereses, en su mayoría convergentes, atentan contra la
+                    vida de los pueblos.
+                    Ha llegado la hora de los pueblos.
+                </p>
             </div>
             <div class="col-sm-4">
-                <h3>Columna 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+                <h3 class="text-white">Un poco sobre mi</h3>
+                <p class="text-white">Mi nombre es Facundo, soy de Argentina, provincia de Buenos Aires, localiad de
+                    Lanús.
+                    Soy estudiante de Relaciones Internacionales en la UNLa, y también estoy dando mis primeros pasos en
+                    el mundo del desarrollo web.
+                    Mi idea es "revolucionar" la forma de adquirir noticias en el mundo de hoy. Para evitar el monopolio
+                    de la información y que no avancemos hacía una distopía informativa.
+                </p>
             </div>
         </div>
     </div>
 
-    
-     <!-- Páginas -->
 
-     <nav aria-label="Page navigation example">
+    <!-- Páginas -->
+
+    <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
-            <!-- <li class="page-item disabled">
-                <a class="page-link">Previous</a>
-            </li> -->
             <li class="page-item"><a class="page-link" href="../index.html">Inicio</a></li>
             <li class="page-item"><a class="page-link" href="./politicainternacional.html">Politica
                     Internacional</a></li>
             <li class="page-item"><a class="page-link" href="./biblioteca.html">Biblioteca</a></li>
             <li class="page-item">
                 <a class="page-link" href="./quiensoy.html">Quién soy</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="./contacto.html">Contacto</a>
             </li>
         </ul>
     </nav>
@@ -104,7 +120,6 @@
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             © 2022 Copyright: Desarrolado por, fnasello.
-            <!-- <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a> -->
         </div>
         <!-- Copyright -->
     </footer>
